# uni_error

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: map_kind.rs
src/: cause.rs  convert.rs  error.rs  inner.rs  kind.rs  lib.rs
tests/: test_cause.rs  test_convert.rs  test_error.rs
tests/common/: mod.rs
