[package]
name = "uni_error"
version = "0.11.2"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple, universal error type for Rust"
repository = "https://github.com/nu11ptr/uni_error"
documentation = "https://docs.rs/uni_error"
keywords = ["error", "error-handling"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"
edition = "2024"

[features]
default = ["std"]
backtrace = ["std"]
std = []

# Axum specific IntoResponse implementation. Enable one or the other, not both.
axum_code = ["dep:axum", "dep:http"]
axum_code2 = ["dep:axum", "dep:http"]
# Generic HTTP status code (if not using Axum). Enable one or the other, not both.
http_code = ["dep:http"]
http_code2 = ["dep:http"]
# Tonic specific Code/Status implementation. Enable one or the other, not both.
tonic_code = ["dep:tonic"]
tonic_code2 = ["dep:tonic"]

[dependencies.axum]
# Axum hasn't hit 1.0 yet, and 0.1 and up implement IntoResponse the way we need, so make this as broad as possible.
version = "> 0.1, < 2.0"
default-features = false
optional = true

[dependencies.http]
version = "1"
default-features = false
optional = true

[dependencies.tonic]
# Tonic hasn't hit 1.0 yet, and 0.1 and up implement Code/Status the way we need, so make this as broad as possible.
version = ">= 0.1, < 2.0"
default-features = false
optional = true

[package.metadata.docs.rs]
features = ["backtrace", "std"]
